# Vinschool_AI_For_Good

./: .gitignore  README.md  flake.nix  package-lock.json  package.json  render.yaml  tsconfig.json
backend/: .dockerignore  .env.example  .gitignore  DEMO.md  Dockerfile  QUICKSTART.md  README.md  __init__.py  docker-compose.yml  flake.nix  pyproject.toml  quickstart.sh
backend/agents/base/: __init__.py  agent.py
backend/agents/content_processor/: __init__.py  agent.py
backend/agents/grading/: __init__.py  agent.py
backend/agents/teaching_assistant/: __init__.py  agent.py
backend/api/: main.py
backend/api/routes/: admin.py  student.py  teacher.py  zalo.py
backend/config/: __init__.py  settings.py
backend/data/: lesson.txt
backend/data/1. Tài liệu GV upload lên/: Bài giảng 9.1 addition & subtraction of fractions.pptx  Lesson Plan_ Unit 9.docx
backend/data/3. Báo cáo tiến bộ học sinh/: AI for good - Mẫu báo cáo cuối học kì I.docx
backend/database/: __init__.py  milvus_client.py  postgres_client.py
backend/database/repositories/: daily_lesson_repository.py  document_repository.py  grading_repository.py  student_profile_repository.py
backend/domain/: __init__.py
backend/domain/models/: __init__.py  assignment.py  document.py  student.py  teacher.py
backend/domain/repositories/: __init__.py  base.py
backend/scripts/: debug_real_content.py  demo.py  demo_chat.py  demo_notification.py  init_milvus.py  populate_mock_data.py  reset_milvus.py  run_google_chat.py  run_zalo_server.py  seed_daily_lessons.py  seed_student_profiles.py  test_embeddings.py  test_vector_search.py
backend/services/: scheduler.py
backend/services/chat/: __init__.py  chat_service.py  debouncer.py  google_chat_listener.py  submission_store.py
backend/services/notification/: __init__.py  base.py  email_notifier.py  google_chat_notifier.py  models.py  notification_service.py  zalo_notifier.py
backend/tests/: test_chat_service.py  test_debouncer.py  test_google_chat_listener.py  test_notification_service.py  test_submission_store.py
backend/utils/: __init__.py  document_parser.py  embeddings.py  gemini_vision.py  logger.py
backend/workflow/: __init__.py  daily_content_workflow.py  homework_grading_workflow.py  practice_exercise_workflow.py  question_answering_workflow.py
frontend/: README.md  (+5 more)
(+37 files in other folders)
